# GroqLab-AI

./: README.md  groq_llm_query.js  groq_llm_query.py  my_script.py  package-lock.json  package.json  pyproject.toml
agents/: chat.py  main.py  main1.py  prompt.txt
basic_queries/: groq_llm_query.js  groq_llm_query.py
code_refactor/: RefactoBot.py
file_analyzer/: add_header_comments.py  improve_markdown_files.py  print_file_name_and_summary.py  scan_c_files.py
models/: get_models.py  test_model.py
